--- a/PAZ/MainWindow.xaml
+++ b/PAZ/MainWindow.xaml
@@ -354,7 +354,45 @@
             </TabItem>
 
 
-          
+
+            
+
+            <!-- OPTIES-->
+            <TabItem Header="Opties" Name="tabItemOpties" Padding="5"  Background="White" Width="80" HorizontalAlignment="Center">
+                <Grid Name="GridOpties">
+
+
+                    <GroupBox Header="Deadlines" Height="200" Margin="10,2,5,0" Name="groupBoxDeadlines" VerticalAlignment="Top">
+                        <Grid>
+                            <TextBlock Height="27" HorizontalAlignment="Left" Margin="24,15,0,0" Name="textBlockDeadlineBeschrijving" Text="Hier kunt u de deadline instellen, van en tot wanneer er voor de planning ingeschreven kan worden." VerticalAlignment="Top" Width="520" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
+                            <TextBlock Height="27" HorizontalAlignment="Left" Margin="24,55,0,0" Name="textBlockDeadlineStart" Text="Start datum" VerticalAlignment="Top" Width="172" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="293,55,0,0" Name="textBoxDeadlineStart" VerticalAlignment="Top" Width="252" />
+
+                            <TextBlock Height="27" HorizontalAlignment="Left" Margin="24,105,0,0" Name="textBlockDeadlineEind" Text="Eind datum" VerticalAlignment="Top" Width="172" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="293,105,0,0" Name="textBoxDeadlineEind" VerticalAlignment="Top" Width="252" />
+
+                            <Button Content="Opslaan" Height="23" HorizontalAlignment="Left" Margin="447,148,0,0" Name="buttonOptiesOpslaan" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" />
+                            </Grid>
+                    </GroupBox>
+
+
+                    <GroupBox Header="E-mail instellingen" Height="220" Margin="10,220,5,0" Name="groupBoxEmailInstellingen" VerticalAlignment="Top">
+                        <Grid>
+                            <TextBlock Height="35" HorizontalAlignment="Left" Margin="24,15,0,0" Name="textBlockEmailInstellingenBeschrijving" Text="Hier kunt u e-mail instellingen wijzigen, de informatie die wordt weergeven als er een e-mail wordt onvangen door een extern persoon. Deze externe persoon zal dan zien dat de e-mail afkomstig is van de onderstaande gegevens." VerticalAlignment="Top" Width="692" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
+                            <TextBlock Height="27" HorizontalAlignment="Left" Margin="24,65,0,0" Name="textBlockEmailAfzender" Text="Naam afzender" VerticalAlignment="Top" Width="172" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="293,65,0,0" Name="textBoxEmailAfzender" VerticalAlignment="Top" Width="252" Text="Avans Planner" />
+
+                            <TextBlock Height="27" HorizontalAlignment="Left" Margin="24,115,0,0" Name="textBlockEmail" Text="E-mail afzender" VerticalAlignment="Top" Width="172" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="293,115,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="252" Text="planner@avans.nl" />
+
+                            <Button Content="Opslaan" Height="23" HorizontalAlignment="Left" Margin="447,158,0,0" Name="buttonEmailOpslaan" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" />
+                        </Grid>
+                    </GroupBox>
+
+                </Grid>
+            </TabItem>
+
+
         </TabControl>
     </Grid>
 </Window>
