--- a/PAZ/App.xaml
+++ b/PAZ/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="PAZ.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Login.xaml">
+             StartupUri="View/Login.xaml">
     <Application.Resources>
          
     </Application.Resources>
