--- a/PAZ/MainWindow.xaml
+++ b/PAZ/MainWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="PAZ.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Avans PAZ" Height="649" Width="825" Icon="/PAZ;component/Images/paz.ico">
+        Title="Avans PAZ" Height="649" Width="825" Icon="/PAZ;component/Resources/paz.ico">
     <Grid Background="#FFD51D53" DataContext="{Binding}" Height="609">
         <Label Height="34" HorizontalAlignment="Left" Margin="675,12,0,0" Name="label4" VerticalAlignment="Top" Width="116">
             <Label.Background>
-                <ImageBrush ImageSource="/PAZ;component/Images/AvansLogo.png" />
+                <ImageBrush ImageSource="/PAZ;component/Resources/AvansLogo.png" />
             </Label.Background>
         </Label>
         <TabControl Height="544" HorizontalAlignment="Left" Margin="12,53,0,0" Name="tabControl" VerticalAlignment="Top" Width="779" Background="White">
