--- a/PAZ/View/Login.xaml
+++ b/PAZ/View/Login.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Class="PAZ.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Avans PAZ" Height="290" Width="471" Icon="/PAZ;component/Images/paz.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Avans PAZ" Height="290" Width="471" Icon="/PAZ;component/Resources/paz.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Width="475" Height="285">
         <Grid.Background>
-            <ImageBrush ImageSource="/PAZ;component/Images/Login_bg.png" Stretch="UniformToFill" TileMode="None" />
+            <ImageBrush ImageSource="/PAZ;component/Resources/Login_bg.png" Stretch="UniformToFill" TileMode="None" />
         </Grid.Background>
         <GroupBox Header="Login" Height="137" HorizontalAlignment="Left" Margin="39,72,0,0" Name="groupBoxLogin" VerticalAlignment="Top" Width="392" Background="#CDFFFFFF" Foreground="#FF414141" FontSize="18" FontWeight="Bold">
             <Grid>
@@ -15,7 +15,7 @@
                 <PasswordBox Height="36" HorizontalAlignment="Left" Margin="48,39,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="260" Grid.ColumnSpan="2" Foreground="#FF5F5F5F" Padding="5" />
                 <Label Grid.Column="1" Height="36" HorizontalAlignment="Left" Margin="108,39,0,0" Name="labelButton" VerticalAlignment="Top" Width="40" MouseDown="labelButton_MouseDown" Cursor="Hand">
                     <Label.Background>
-                        <ImageBrush ImageSource="/PAZ;component/Images/LoginButtonBg.png" Stretch="UniformToFill" TileMode="None" />
+                        <ImageBrush ImageSource="/PAZ;component/Resources/LoginButtonBg.png" Stretch="UniformToFill" TileMode="None" />
                     </Label.Background>
                 </Label>
             </Grid>
