Pressing enter on login works, calender + reading ini

--- a/PAZ/View/Login.xaml
+++ b/PAZ/View/Login.xaml
@@ -12,7 +12,7 @@
                     <ColumnDefinition Width="192*" />
                     <ColumnDefinition Width="183*" />
                 </Grid.ColumnDefinitions>
-                <PasswordBox Height="36" HorizontalAlignment="Left" Margin="48,39,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="260" Grid.ColumnSpan="2" Foreground="#FF5F5F5F" Padding="5" />
+                <PasswordBox Height="36" Margin="48,39,72,0" Name="passwordBox1" VerticalAlignment="Top" Grid.ColumnSpan="2" Foreground="#FF5F5F5F" Padding="5" KeyDown="passwordBox1_KeyDown" />
                 <Label Grid.Column="1" Height="36" HorizontalAlignment="Left" Margin="108,39,0,0" Name="labelButton" VerticalAlignment="Top" Width="40" MouseDown="labelButton_MouseDown" Cursor="Hand">
                     <Label.Background>
                         <ImageBrush ImageSource="/PAZ;component/Resources/LoginButtonBg.png" Stretch="UniformToFill" TileMode="None" />
