--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -14,7 +14,7 @@
             </Label.Background>
         </Label>
         <TabControl Height="585" HorizontalAlignment="Left" Margin="12,53,0,0" Name="tabControl" VerticalAlignment="Top" Width="779" Background="White" Grid.RowSpan="2">
-            <TabItem Header="Calender TEST!!!!!!" Name="tabCalender" Background="White" Padding="5" Width="100" HorizontalAlignment="Center">
+            <TabItem Header="Calender" Name="tabCalender" Background="White" Padding="5" Width="80" HorizontalAlignment="Center">
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" >
                     <Grid Name="calender">
                     </Grid>
