Wat verbeteringen doorgevoerd voor het gebruik van SaveFileDialogs.
Wat veranderingen doorgevoerd aan de PDF Export functie, waaronder bug fixes en een begin opzetje gemaakt voor het genereren van brieven.

Signed-off-by: Yorg Kuijs <yorg.kuijs@home.nl>

--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -245,7 +245,7 @@
 
                         <GroupBox Header="Brief printen" Height="82" Margin="10,452,5,0" Name="groupBoxBriefPrinten" VerticalAlignment="Top">
                                 <Grid>
-                                    <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockBriefPrinten" Text="Deze actie print een brief uit." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
+                                    <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockBriefPrinten" Text="Deze actie print een bevestigingsbrief uit om te versturen naar de experts." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
                                     <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonBriefPrinten" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonBriefPrinten_Click" />
                                 </Grid>
                         
