Adding classrooms fully implemented.

--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -107,7 +107,7 @@
                         <Grid Height="376" Visibility="Visible">
                             <Label Content="Lokaal nummer" Height="28" HorizontalAlignment="Left" Margin="24,19,0,0" Name="labelLokaalNummer" Foreground="#FF5E5353" VerticalAlignment="Top" Width="152" />
                             <TextBox Height="23" HorizontalAlignment="Left" Margin="293,21,0,0" Name="textBoxLokaalGegevens" VerticalAlignment="Top" Width="246" Foreground="#FF595959"/>
-                            <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="446,65,0,0" Name="buttonLokaalGegevens" VerticalAlignment="Top" Width="93" Background="#FFEFEFEF" Foreground="#FF595959" />
+                            <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="446,65,0,0" Name="buttonLokaalGegevens" VerticalAlignment="Top" Width="93" Background="#FFEFEFEF" Foreground="#FF595959" Click="onClassroomAddClicked" />
                         </Grid>
                     </GroupBox>
                     
