--- a/PAZ/View/Login.xaml
+++ b/PAZ/View/Login.xaml
@@ -1,12 +1,20 @@
 ﻿<Window x:Class="PAZ.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
         Title="Avans PAZ" Height="290" Width="471" Icon="/PAZ;component/Resources/paz.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
-    <Grid Width="475" Height="285">
+    
+    <Window.Resources>
+        <ResourceDictionary>
+            <TextBlock x:Key="CursorGrab" Cursor="Resources/Cursors/wii-loading-ring.ani"/>
+        </ResourceDictionary>
+    </Window.Resources>
+
+    <Grid Width="475" Height="285" Name="GridLogin">
+        
         <Grid.Background>
             <ImageBrush ImageSource="/PAZ;component/Resources/Login_bg.png" Stretch="UniformToFill" TileMode="None" />
         </Grid.Background>
-        <GroupBox Header="Login" Height="137" HorizontalAlignment="Left" Margin="39,72,0,0" Name="groupBoxLogin" VerticalAlignment="Top" Width="392" Background="#CDFFFFFF" Foreground="#FF414141" FontSize="18" FontWeight="Bold">
+        <GroupBox Header="Login" Height="137" HorizontalAlignment="Left" Margin="39,72,0,0" Name="groupBoxLogin" VerticalAlignment="Top" Width="386" Background="#CDFFFFFF" Foreground="#FF414141" FontSize="18" FontWeight="Bold">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="192*" />
@@ -20,5 +28,9 @@
                 </Label>
             </Grid>
         </GroupBox>
+        <Grid Height="137" HorizontalAlignment="Left" Margin="33,72,0,0" Name="gridLoadingSreen" Visibility="Hidden"  VerticalAlignment="Top" Width="392" Background="White">
+            <Label Content="Laden. Moment geduld aub." Height="28" HorizontalAlignment="Left" Margin="93,64,0,0" Name="labelLoading" VerticalAlignment="Top" Width="199" FontWeight="Bold" FontFamily="Verdana" Foreground="#FFC44E4E" />
+        </Grid>
     </Grid>
+    
 </Window>
