--- a/PAZ/View/EmailWindow.xaml
+++ b/PAZ/View/EmailWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PAZ.EmailWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="E-mail versturen" Height="549" Width="708" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ResizeMode="NoResize">
+        Title="E-mail versturen" Background="#FFD51D53" Height="549" Width="708" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ResizeMode="NoResize">
     <Grid>
         <TabControl HorizontalAlignment="Left" Name="tcGeadresseerden" VerticalAlignment="Top" Width="662" UseLayoutRounding="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Height="441" Margin="12,12,0,0">
             <TabItem Header="Geadresseerden selecteren " Name="tiGeadresseerden">
@@ -29,8 +29,7 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <Button Content="Annuleren" Height="29" HorizontalAlignment="Right" Margin="0,459,119,0" Name="btnAnnuleren" VerticalAlignment="Top" Width="84" Click="btnAnnuleren_Click" />
-        <Button Content="Verzenden" Height="29" HorizontalAlignment="Left" Margin="573,459,0,0" Name="bntVerzenden" VerticalAlignment="Top" Width="84" Click="bntVerzenden_Click" />
-        <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="18,465,0,0" Name="button1" VerticalAlignment="Top" Width="143" />
+        <Button Content="Annuleren" Height="29" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Right" Margin="0,459,119,0" Name="btnAnnuleren" VerticalAlignment="Top" Width="84" Click="btnAnnuleren_Click" />
+        <Button Content="Verzenden" Height="29" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="573,459,0,0" Name="bntVerzenden" VerticalAlignment="Top" Width="84" Click="bntVerzenden_Click" />
     </Grid>
 </Window>
