--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
-        Title="Avans PAZ" Height="696" Width="819" Icon="/PAZ;component/Resources/paz.ico">
+        Title="Avans PAZ" Height="784" Width="819" Icon="/PAZ;component/Resources/paz.ico">
     <Grid Background="#FFD51D53" DataContext="{Binding}" ShowGridLines="False" ClipToBounds="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="612*" />
@@ -25,9 +25,9 @@
                 <Grid Name="GridOverzicht">
                     <GroupBox Header="Zoeken" Height="64" HorizontalAlignment="Left" Margin="6,0,0,0" Name="groupBoxSearch" VerticalAlignment="Top" Width="757">
                         <Grid Height="44">
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="83,8,0,0" Name="textboxSearch" VerticalAlignment="Top" Width="167" TextChanged="textboxSearch_TextChanged" />
-                            <Label Content="Zoeken op" Height="28" HorizontalAlignment="Left" Margin="6,6,0,0" Name="labelSearch" VerticalAlignment="Top" Width="97" Foreground="#FF3E3E3E" />
-                            <ComboBox Height="23" HorizontalAlignment="Left" Margin="282,8,0,0" Name="comboBoxSearch" VerticalAlignment="Top" Width="212" SelectionChanged="comboBoxSearch_SelectionChanged">
+                            <TextBox Height="23" HorizontalAlignment="Left" Foreground="#FF595959" Margin="83,8,0,0" Name="textboxSearch" VerticalAlignment="Top" Width="167" TextChanged="textboxSearch_TextChanged" />
+                            <Label Content="Zoeken op" Height="28" FontStyle="Italic" HorizontalAlignment="Left" Margin="6,6,0,0" Name="labelSearch" VerticalAlignment="Top" Width="71" Foreground="#FF3E3E3E" />
+                            <ComboBox Height="23" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="282,8,0,0" Name="comboBoxSearch" VerticalAlignment="Top" Width="212" SelectionChanged="comboBoxSearch_SelectionChanged">
                                 <ComboBoxItem Content="Leeg filter" />
                                 <ComboBoxItem Content="Datum" />
                                 <ComboBoxItem Content="Tijd" />
@@ -247,9 +247,15 @@
                                 <Grid>
                                     <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockBriefPrinten" Text="Deze actie print een bevestigingsbrief uit om te versturen naar de experts." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
                                     <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonBriefPrinten" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonBriefPrinten_Click" />
-                                </Grid>
+                        </Grid>
                         
                         </GroupBox>
+                    <GroupBox Header="Zittingen Genereren" Height="82" Margin="8,546,7,0" Name="groupBoxZittingenGen" VerticalAlignment="Top">
+                        <Grid>
+                            <TextBlock FontStyle="Italic" Foreground="#FF5E5353" Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockZittingGen" Text="Deze actie genereert automatisch een planning voor de zittingen." TextWrapping="Wrap" VerticalAlignment="Top" Width="570" />
+                            <Button Background="#FFEFEFEF" Click="buttonBriefPrinten_Click" Content="Bevestig actie" Foreground="#FF595959" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="button1" VerticalAlignment="Top" Width="98" />
+                        </Grid>
+                    </GroupBox>
                 </Grid>
             </TabItem>
 
