--- a/PAZ/View/EmailWindow.xaml
+++ b/PAZ/View/EmailWindow.xaml
@@ -1,19 +1,32 @@
 ﻿<Window x:Class="PAZ.EmailWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="E-mail versturen" Background="#FFD51D53" Height="549" Width="708" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ResizeMode="NoResize">
+        Title="E-mail versturen" Height="549" Width="708" WindowStartupLocation="CenterOwner" WindowStyle="SingleBorderWindow" ResizeMode="NoResize">
     <Grid>
         <TabControl HorizontalAlignment="Left" Name="tcGeadresseerden" VerticalAlignment="Top" Width="662" UseLayoutRounding="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Height="441" Margin="12,12,0,0">
+            <TabItem Header="Bericht aanpassen" Name="tiBericht">
+                <Grid>
+                    <TextBox Height="270" HorizontalAlignment="Left" Margin="108,66.723,0,0" Name="tbBody" VerticalAlignment="Top" Width="385" Text="&lt;p&gt;Blah blah secret base&lt;/p&gt;" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" AcceptsTab="True" />
+                </Grid>
+            </TabItem>
             <TabItem Header="Geadresseerden selecteren " Name="tiGeadresseerden">
                 <Grid>
                     <GroupBox Header="Studenten: " Height="397.04" HorizontalAlignment="Left" Margin="6,6,0,0" Name="gbStudenten" VerticalAlignment="Top" Width="323">
                         <Grid>
-                            <ScrollViewer Height="362.08" HorizontalAlignment="Left" Margin="6,6,0,0" Name="scrollViewerStudenten" VerticalAlignment="Top" Width="291" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible"></ScrollViewer>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="29*" />
+                                <ColumnDefinition Width="282*" />
+                            </Grid.ColumnDefinitions>
+                            <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Name="cbxStudentSelector" Margin="6,5,18,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Checked="cbxStudentSelector_Checked" Unchecked="cbxStudentSelector_Unchecked" />
+                            <ScrollViewer Height="336.08" HorizontalAlignment="Left" Margin="6,32,0,0" Name="scrollViewerStudenten" VerticalAlignment="Top" Width="299" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" Grid.ColumnSpan="2"></ScrollViewer>
+                            <Separator Name="separator1" Grid.ColumnSpan="2" Margin="6,21,6,351.763" />
                         </Grid>
                     </GroupBox>
                     <GroupBox Header="Docenten: " Height="397.04" HorizontalAlignment="Left" Margin="335,6,0,0" Name="gbDocenten" VerticalAlignment="Top" Width="311">
                         <Grid>
-                            <ScrollViewer HorizontalScrollBarVisibility="Visible" Name="scrollViewerDocenten" VerticalScrollBarVisibility="Visible" Margin="6" />
+                            <ScrollViewer HorizontalScrollBarVisibility="Visible" Name="scrollViewerDocenten" VerticalScrollBarVisibility="Visible" Margin="6,32,6,6" />
+                            <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Margin="6,6,6,0" Name="cbxTeacherSelector" VerticalAlignment="Top" Checked="cbxTeacherSelector_Checked" Unchecked="cbxTeacherSelector_Unchecked" />
+                            <Separator Height="2" HorizontalAlignment="Left" Margin="6,24,0,0" Name="separator2" VerticalAlignment="Top" Width="287" />
                         </Grid>
                     </GroupBox>
                 </Grid>
@@ -29,7 +42,7 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <Button Content="Annuleren" Height="29" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Right" Margin="0,459,119,0" Name="btnAnnuleren" VerticalAlignment="Top" Width="84" Click="btnAnnuleren_Click" />
-        <Button Content="Verzenden" Height="29" Background="#FFEFEFEF" Foreground="#FF595959" HorizontalAlignment="Left" Margin="573,459,0,0" Name="bntVerzenden" VerticalAlignment="Top" Width="84" Click="bntVerzenden_Click" />
+        <Button Content="Annuleren" Height="29" HorizontalAlignment="Left" Margin="483,459,0,0" Name="btnAnnuleren" VerticalAlignment="Top" Width="90" Click="btnAnnuleren_Click" />
+        <Button Content="Verzenden" Height="29" HorizontalAlignment="Left" Margin="579,459,0,0" Name="bntVerzenden" VerticalAlignment="Top" Width="78" Click="bntVerzenden_Click" />
     </Grid>
 </Window>
